--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.cdnfonts.com/css/gilroy-bold");
+
 :root {
   --blue: #005ae2;
   --white: #fff;
@@ -7,12 +9,20 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: Arial, sans-serif;
+  font-weight: 400;
   background-color: var(--white);
   color: #333;
   width: 100%;
   overflow-x: hidden;
 }
+
+h1, h2, h3 {
+  font-family: "Gilroy-Bold", sans-serif;
+}
+
+p {
+  font-family: "Gilroy-Medium", sans-serif;
+}   
 
 a {
   text-decoration: none;
@@ -29,6 +39,12 @@ button {
   background-color: var(--blue);
   color: var(--white);
   border: none;
+}
+
+button:hover {
+  background-color: var(--white);
+  color: var(--blue);
+  border: 3px solid var(--blue);
 }
 
 .blue-highlight {
@@ -55,19 +71,12 @@ header .header-content {
   align-items: center;
 }
 
-/* .header-logo {
-  display: flex;
-  align-items: center;
-  margin-right: 20px;
-} */
-
 ul {
   display: flex;
   gap: 50px;
 }
 
 li {
-  font-weight: 500;
   font-size: 18px;
 }
 
@@ -85,7 +94,6 @@ li a:hover {
 }
 
 .header-account {
-  font-weight: 500;
   font-size: 16px;
 }
 
@@ -99,13 +107,27 @@ li a:hover {
 .header-account button {
   padding: 10px 20px;
   border-radius: 25px;
-  border: none;
 }
 
+.hero-main {
+  text-align: center;
+  padding: 50px 0;
+  position: relative;
+  z-index: 1;
+  margin-top: 30px;
+}
 
+.hero-main h1 {
+  font-size: 3rem;
+  margin-bottom: 20px;
+  line-height: 2;
+}
 
-
-
+#hero-subheading {
+  font-size: 1.1rem;
+  line-height: 1.7;
+  margin-bottom: 50px;
+}
 
 
 
