more styles edit

--- a/style.css
+++ b/style.css
@@ -9,23 +9,27 @@
 body {
   margin: 0;
   padding: 0;
+  font-family: "Gilroy", sans-serif;
   font-weight: 400;
   background-color: var(--white);
-  color: #333;
+  color: #000;
   width: 100%;
   overflow-x: hidden;
 }
 
-h1, h2, h3 {
+h1,
+h2,
+h3 {
   font-family: "Gilroy-Bold", sans-serif;
 }
 
 p {
   font-family: "Gilroy-Medium", sans-serif;
-}   
+}
 
 a {
   text-decoration: none;
+  font-family: "Gilroy-Semibold", sans-serif;
 }
 
 ul {
@@ -53,7 +57,8 @@ button:hover {
 
 /* Hero Frame Style */
 .hero-frame {
-  max-width: 1200px;
+  max-width: 100vh;
+  height: 100vh;
   margin: 0 auto;
   padding: 0 20px;
 }
@@ -86,11 +91,11 @@ li a:hover {
 
 .dropdown-arrow {
   margin-left: 5px;
+  transition: transform 0.3s ease;
 }
 
 .dropdown-arrow:hover {
   transform: rotate(180deg);
-  transition: transform 0.3s ease;
 }
 
 .header-account {
@@ -99,13 +104,17 @@ li a:hover {
 
 .header-account a {
   color: var(--blue);
+  margin-right: 10px;
 }
 .header-account a:hover {
-  text-decoration: underline;
+  border-radius: 25px;
+  padding: 10px 40px;
+  background-color: #c5c5c5;
 }
 
 .header-account button {
-  padding: 10px 20px;
+  padding: 10px 40px;
+  margin-left: 10px;
   border-radius: 25px;
 }
 
@@ -114,13 +123,13 @@ li a:hover {
   padding: 50px 0;
   position: relative;
   z-index: 1;
-  margin-top: 30px;
 }
 
 .hero-main h1 {
   font-size: 3rem;
   margin-bottom: 20px;
   line-height: 2;
+  margin-top: 0;
 }
 
 #hero-subheading {
@@ -129,14 +138,69 @@ li a:hover {
   margin-bottom: 50px;
 }
 
+.hero-buttons {
+  margin-bottom: 50px;
+}
 
+#signup-button {
+  padding: 10px 40px;
+  margin-right: 30px;
+  border-radius: 25px;
+  transition: background-color 0.3s ease, color 0.3s ease;
+}
+#signup-button:hover {
+  background-color: var(--white);
+  color: var(--blue);
+  border: 3px solid var(--blue);
+}
+#learn-more-link {
+  color: var(--blue);
+  margin-left: 30px;
+}
 
+#learn-more-link:hover {
+  border-radius: 25px;
+  padding: 10px 40px;
+  background-color: #c5c5c5;
+}
 
+.hero-graphic-section {
+  display: flex;
+  justify-content: center;
+}
 
+.hero-graphic-card {
+  background-color: #f9f9f9; /* Light grey background */
+  border: 1px solid #e0e0e0;
+  border-radius: 24px;
+  padding: 30px 40px;
+  width: 700px;
+  height: 150px;
+  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.05);
+  border: 1px solid var(--blue);
+}
 
+.hero-graphic-card p {
+  font-size: 1.1rem;
+  line-height: 1.7;
+  line-height: 1.5;
+}
 
+#hero-svg-1 {
+  position: absolute;
+  top: 500px;
+  left: 250px;
+  /* width: 100%;
+  height: auto; */
+  z-index: -1;
+}
 
-
+#hero-svg-2 {
+  position: absolute;
+  bottom: -100px;
+  width: 100vh
+  z-index: 0;
+}
 
 
 
