frame style updated

--- a/style.css
+++ b/style.css
@@ -311,11 +311,24 @@ li a:hover {
   text-align: center;
 }
 
+.subscription-plan-header-section {
+  margin-bottom: 3rem;
+  max-width: 600px;
+  margin: 0 auto;
+}
 
+.subscription-plan-header-section h2 {
+  font-size: 2.5rem;
+  font-weight: 700;
+  margin-bottom: 1rem;
+  position: relative;
+  /* padding-left: 20px; Space for the vertical line */
+}
 
-
-
-
+/* .subscription-plan-header-section p {
+  font-size: 1rem;
+  line-height: 1.6;
+} */
 
 
 
