--- a/style.css
+++ b/style.css
@@ -342,7 +342,7 @@ li a:hover {
   border: 1px solid var(--blue);
   border-radius: 10px;
   text-align: left;
-  height: 100%;
+  height: 455px;
   box-sizing: border-box;
   padding: 20px 30px;
 }
@@ -350,6 +350,9 @@ li a:hover {
 .subscription-plan-card-pro {
   background-color: #1E3448;
   border-radius: 10px;
+  width: 410px;
+  height: 627px;
+  z-index: 10;
    
 }
 
