Subcription section updated

--- a/style.css
+++ b/style.css
@@ -315,6 +315,7 @@ li a:hover {
   margin-bottom: 3rem;
   max-width: 600px;
   margin: 0 auto;
+  
 }
 
 .subscription-plan-header-section h2 {
@@ -334,14 +335,21 @@ li a:hover {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   gap: 0;
+  justify-content: center;
   align-items: center;
-  margin-bottom: 30px;
+  margin: 60px auto;
+}
+
+.subscription-plan-body-section h3 {
+  font-size: 1.8rem;
+  margin-top: 0;
 }
 
 .subscription-plan-card {
   border: 1px solid var(--blue);
-  border-radius: 10px;
+  border-radius: 12px;
   text-align: left;
+  width: 379px;
   height: 455px;
   box-sizing: border-box;
   padding: 20px 30px;
@@ -349,11 +357,15 @@ li a:hover {
 
 .subscription-plan-card-pro {
   background-color: #1E3448;
-  border-radius: 10px;
+  color: var(--white);
+  text-align: left;
+  padding: 20px 30px;
+  border-radius: 12px;
   width: 410px;
   height: 627px;
+  transform: scale(1.05);
   z-index: 10;
-   
+  border: none;
 }
 
 
