--- a/style.css
+++ b/style.css
@@ -341,8 +341,27 @@ li a:hover {
 }
 
 .subscription-plan-body-section h3 {
-  font-size: 1.8rem;
-  margin-top: 0;
+  font-size: 2rem;
+  margin-bottom: 0;
+}
+
+.subscription-plan-body-section h4 {
+  font-size: 1.2rem;
+  font-weight: 400;
+}
+
+.subscription-plan-body-section ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+.subscription-plan-body-section ul li {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 10px;
+  font-size: 0.9rem;
 }
 
 .subscription-plan-card {
@@ -352,8 +371,10 @@ li a:hover {
   width: 379px;
   height: 455px;
   box-sizing: border-box;
-  padding: 20px 30px;
+  padding: 20px 50px;
 }
+
+
 
 .subscription-plan-card-pro {
   background-color: #1E3448;
