--- a/style.css
+++ b/style.css
@@ -43,12 +43,13 @@ button {
   background-color: var(--blue);
   color: var(--white);
   border: none;
+  padding: 12px 50px;
 }
 
 button:hover {
   background-color: var(--white);
   color: var(--blue);
-  border: 3px solid var(--blue);
+  border: 1px solid var(--blue);
 }
 
 .blue-highlight {
@@ -109,7 +110,6 @@ li a:hover {
 }
 
 .header-account button {
-  padding: 10px 40px;
   margin-left: 10px;
   border-radius: 25px;
 }
@@ -146,7 +146,6 @@ li a:hover {
 }
 
 #signup-button {
-  padding: 10px 40px;
   margin-right: 30px;
   border-radius: 25px;
   transition: background-color 0.3s ease, color 0.3s ease;
@@ -315,7 +314,6 @@ li a:hover {
   margin-bottom: 3rem;
   max-width: 600px;
   margin: 0 auto;
-  
 }
 
 .subscription-plan-header-section h2 {
@@ -323,13 +321,7 @@ li a:hover {
   font-weight: 700;
   margin-bottom: 1rem;
   position: relative;
-  /* padding-left: 20px; Space for the vertical line */
 }
-
-/* .subscription-plan-header-section p {
-  font-size: 1rem;
-  line-height: 1.6;
-} */
 
 .subscription-plan-body-section {
   display: grid;
@@ -337,7 +329,7 @@ li a:hover {
   gap: 0;
   justify-content: center;
   align-items: center;
-  margin: 60px auto;
+  margin: 60px 100px;
 }
 
 .subscription-plan-body-section h3 {
@@ -348,20 +340,29 @@ li a:hover {
 .subscription-plan-body-section h4 {
   font-size: 1.2rem;
   font-weight: 400;
+  margin-top: 20px;
+}
+
+.subscription-plan-body-section p {
+  margin-bottom: 30px;
 }
 
 .subscription-plan-body-section ul {
   list-style: none;
   padding: 0;
   margin: 0;
+  display: grid;
+  grid-template-columns: 1fr;
+  align-items: left;
+  gap: 30px;
 }
 
 .subscription-plan-body-section ul li {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin-bottom: 10px;
   font-size: 0.9rem;
+}
+
+.subscription-plan-body-section .check-icon {
+  margin-right: 15px;
 }
 
 .subscription-plan-card {
@@ -371,25 +372,51 @@ li a:hover {
   width: 379px;
   height: 455px;
   box-sizing: border-box;
-  padding: 20px 50px;
+  box-shadow: 0 10px 8px rgba(0, 0, 0, 0.05);
+  padding: 20px 80px;
 }
 
-
-
 .subscription-plan-card-pro {
-  background-color: #1E3448;
+  background-color: #1e3448;
   color: var(--white);
   text-align: left;
-  padding: 20px 30px;
+  padding: 90px 70px;
   border-radius: 12px;
   width: 410px;
   height: 627px;
   transform: scale(1.05);
   z-index: 10;
   border: none;
+  box-sizing: border-box;
+  box-shadow: 0 10px 8px rgba(0, 0, 0, 0.05);
 }
 
+.subscription-plan-buttons {
+  display: flex;
+  justify-content: center;
+  gap: 15px;
+  margin-top: 50px;
+}
 
+.subscription-plan-buttons button {
+  border-radius: 25px;
+  font-size: 1rem;
+  font-weight: 500;
+  border-radius: 25px;
+  transition: background-color 0.3s ease, color 0.3s ease;
+}
+
+#custom-price-button {
+  color: var(--blue);
+  border: 1px solid var(--blue);
+  background-color: var(--white);
+}
+
+#custom-price-button:hover {
+  background-color: var(--blue);
+  color: var(--white);
+  border: none;
+}
 
 
 
