--- a/style.css
+++ b/style.css
@@ -427,7 +427,8 @@ li a:hover {
   display: grid;
   justify-content: center;
   align-content: center;
-  height: 100vh;
+  height: 523px;
+  background-color: #1E3448;
 }
 
 /* faq-frame */
