--- a/style.css
+++ b/style.css
@@ -598,6 +598,7 @@ li a:hover {
   grid-template-columns: repeat(3, 1fr);
   justify-content: space-between;
   align-items: center;
+  max-width: 100%;
   height: 561px;
 }
 
