--- a/style.css
+++ b/style.css
@@ -603,7 +603,7 @@ li a:hover {
 }
 
 .footer-content {
-  /* max-width: 1200px; */
+  max-width: 1440px;
   margin: 0 auto;
   padding: 0 20px;
   position: relative;
@@ -642,6 +642,10 @@ li a:hover {
 .footer-grid-links ul li a {
   color: #000;
   font-size: 0.9rem;
+}
+
+.footer-grid-links ul li a:hover {
+  color: var(--blue);
 }
 
 .footer-note {
